--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,132 @@
-body {
+/* FONT SIZE SYSTEM (px) */
+/* 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
+
+/* SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background-color: #111;
+  color: rgb(230, 159, 27);
+}
+
+.header {
+  margin: 0 auto;
+  max-width: 120rem;
+  text-align: center;
+  margin-bottom: 3.2rem;
+}
+
+.header-title {
+  font-size: 7.4rem;
+  margin-top: 4.8rem;
+  margin-bottom: 2.4rem;
+}
+
+.search {
+  border: none;
+  padding: 0.8rem;
+  width: 50%;
+  border-radius: 100px;
+}
+
+.main-container {
+  margin: 1.6rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 4.8rem;
+  column-gap: 2.4rem;
+}
+
+.player {
+  width: 16rem;
+  height: 12rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border: solid rgb(230, 159, 27) 2px;
+  border-radius: 9px;
+  text-align: center;
+  transition: all 0.3s;
+  text-decoration: none;
+  background-color: inherit;
+  color: inherit;
+}
+
+.player:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 0.8rem 1rem hsla(30, 8%, 19%, 0.452);
+  cursor: pointer;
+}
+/* //////////////////////////
+ player section
+ */
+
+.section-player {
+  margin: 0 auto;
+  max-width: 120rem;
+  text-align: center;
+  margin-top: 3.2rem;
+}
+
+.btn-back {
+  text-decoration: none;
+  color: inherit;
+  margin-top: 3rem;
+  font-size: 2.4rem;
+  display: block;
+  transition: transform 0.3s;
+}
+
+.btn-back:hover {
+  transform: translateY(-3px);
+}
+
+.section-player__full-name {
+  font-size: 7.4rem;
+  margin-top: 4.8rem;
+  margin-bottom: 2.4rem;
+}
+
+.section-player__error {
+  font-size: 4.8rem;
+}
+
+.stats-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.stat {
+  width: 16rem;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border: solid rgb(230, 159, 27) 2px;
+  border-radius: 9px;
+  text-align: center;
+  background-color: inherit;
+  color: inherit;
+  margin-right: 3rem;
+  margin-bottom: 3rem;
+}
+
+.stat--result {
+  margin-top: 0.8rem;
+  display: block;
 }
